# serte

./: .gitignore  README.md  __init__.py  casas.ipynb  contraste-casas.py  decomposition.py  demo.py  estudio-casas.py  estudio-gnp.py  gnp.ipynb  pirineo_aragones.py  pyproject.toml  read.py  timeseries.py  utils.py
__marimo__/: contraste-casas.ipynb  estudio-casas.ipynb  estudio-gnp.ipynb  pirineo_aragones.ipynb
core/: read.py  timeseries.py
data/: casas.sav  data.csv  data.json  data.xlsx  gnp.sav  http_indexed.txt  pirineo-aragones.csv  pirineos.csv  total_acciones.sav  usuarios.sav
gnp/: .RData  .Rhistory  modelo_gnp.R
src/: core.py  mini_test.py
