[project]
name = "serte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pmdarima>=2.1.1",
    "pyreadstat>=1.3.2",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "statsmodels>=0.14.6",
]
